syntax = "proto3";

option csharp_namespace = "AnyNamespace";

import "google/api/annotations.proto";

package store;

service Store {
    rpc GetProduct (GetProductRequest) returns (GetProductResponse) {
        option (google.api.http) = {
            get: "/v1/products/{productId}"
        };
    };
    rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse){
        option (google.api.http) = {
            get: "/v1/products"
        };
    };
    rpc DeleteProduct (DeleteProductRequest) returns (GetAllProductsResponse){
        option (google.api.http) = {
            delete: "/v1/products/{productId}"
        };
    };
}

message GetProductRequest {
    int32 productId = 1;
}

message GetProductResponse {
    int32 productId = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message GetAllProductsRequest { }

message GetAllProductsResponse {
    repeated GetProductResponse products = 1;
}

message DeleteProductRequest {
    int32 productId = 1;
}
